# realsense_d456_logger

./: CMakeLists.txt  README  README.md  irs_logger.cpp
python_multiplexer/: README.md  realsense_D456.py  rs_get_frame.py  rs_get_imu.py  rs_get_ir.py
